# flygdb-gui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
flygdb/: CMakeLists.txt
flygdb/include/flygdb/: config.hpp.in  flygdb.hpp
flygdb/src/: flygdb_stub.cpp
flygdb_gui/: CMakeLists.txt
flygdb_gui/src/: main.cpp
